manifests/watchtower/syncthing/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-http
  namespace: sync
spec:
  entryPoints: ["web"]
  routes:
    - kind: Rule
      match: Host(`syncthing.watchtower.local`)
      services:
        - name: syncthing
          port: 8384
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-https
  namespace: sync
spec:
  entryPoints: ["websecure"]
  routes:
    - kind: Rule
      match: Host(`syncthing.watchtower.local`)
      services:
        - name: syncthing
          port: 8384
  tls:
    secretName: syncthing-tls
